# rust-cli-solutions

./: .gitignore  Cargo.toml  LICENSE  README.md
02_echor/: Cargo.toml  make_outputs.sh
03_catr/: Cargo.toml
03_catr/src/: lib.rs
04_headr/: Cargo.toml
04_headr/src/: lib.rs
catr/src/: lib.rs
echor/src/: main.rs
echor/tests/: cli.rs
headr/src/: lib.rs
kvstore/: Cargo.toml
kvstore/src/: lib.rs  main.rs
kvstore/src/database/: mod.rs
kvstore/tests/: cli.rs
