[package]
name = "kvstore"
description = "A simple CLI providing a key/value database store."
version = "0.1.0"
edition = "2021"
authors = [ "Rick Rainey" ]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.1.6", features = ["cargo"] }

[dev-dependencies]
assert_cmd = "2"
predicates = "2"

[profile.release]
strip = true